docs: add AI usage for translation of docs

--- a/MuscleMate/docs/Uso de la IA/Uso de ia.mdx
+++ b/MuscleMate/docs/Uso de la IA/Uso de ia.mdx
@@ -10,3 +10,4 @@ ID | MIEMBRO                     | PROMPT                                       
 | 8  | Manuel Ortega García     ||||||
 | 9  | David Dana Cabello       ||||||
 | 10 | David Dana Cabello       ||||||
+| 11 | Elena Tomás Vela         |Documentos de Política de privacidad y Términos y Condiciones, creados en inglés.|Traducir documentos generados de Política de Privacidad y Términos y Condiciones.|Documentos traducidos a español|Documentación| [DeepL](https://www.deepl.com) no guarda registro de los documentos traducidos.|
