docs: añadido alucinacion de IA

--- a/MuscleMate/docs/Uso de la IA/Uso de ia.mdx
+++ b/MuscleMate/docs/Uso de la IA/Uso de ia.mdx
@@ -1,12 +1,29 @@
-ID | MIEMBRO                     | PROMPT                                                                                                      | OBJETIVO                                                               | RESULTADO                                                                                   | PAQUETE               | LINK
----|-----------------------------|-------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------|--------------------------------------------------------------------------------------------|-----------------------|-----
-| 1  | González Marcos, Pedro   ||||||
-| 2  | Ortega García Manuel     ||||||
-| 3  | Elena Tomás Vela const   ||||||
-| 4  | Luis García Parras       ||||||
-| 5  | Elena Tomás Vela         ||||||
-| 6  | Elena Tomás Vela         ||||||
-| 7  | Manuel Ortega García     ||||||
-| 8  | Manuel Ortega García     ||||||
-| 9  | David Dana Cabello       ||||||
-| 10 | David Dana Cabello       ||||||
+| ID  | MIEMBRO                | PROMPT   | OBJETIVO                | RESULTADO   | PAQUETE | LINK                                                               |
+| --- | ---------------------- | -------- | ----------------------- | ----------- | ------- | ------------------------------------------------------------------ |
+| 1   | González Marcos, Pedro | Ver link | Ver [Error 1](#error-1) | Error de IA |         | https://chat.openai.com/share/4cc7a386-d0ea-40ca-b977-6bb327056ba7 |
+| 2   | Ortega García Manuel   |          |                         |             |         |                                                                    |
+| 3   | Elena Tomás Vela const |          |                         |             |         |                                                                    |
+| 4   | Luis García Parras     |          |                         |             |         |                                                                    |
+| 5   | Elena Tomás Vela       |          |                         |             |         |                                                                    |
+| 6   | Elena Tomás Vela       |          |                         |             |         |                                                                    |
+| 7   | Manuel Ortega García   |          |                         |             |         |                                                                    |
+| 8   | Manuel Ortega García   |          |                         |             |         |                                                                    |
+| 9   | David Dana Cabello     |          |                         |             |         |                                                                    |
+| 10  | David Dana Cabello     |          |                         |             |         |                                                                    |
+
+# Errores cometidos por IA
+
+## ChatGPT
+
+## Error 1
+
+Pedro González Marcos ha preguntado a ChatGPT (3.5) si es posible ver en Github
+la marca de tiempo (timestamp) que deja mover una issue a una columna en un tablero Kanban.
+
+ChatGPT dice que **no es posible** ver la marca de tiempo usando solo la interfaz de Github.
+
+La siguiente captura demuestra que es posible ver este hecho:
+
+![E001](/img/ia/IA-Error-01.png)
+
+Tiempo Malgastado: 30 min
