--- a/MuscleMate/docs/other/tco.mdx
+++ b/MuscleMate/docs/other/tco.mdx
@@ -1,16 +1,18 @@
-
+---
+title: TCO
+---
 
 ## Historial de versiones
 
-| Versión | Fecha      | Diferencia entre versiones|
-| ------- | ---------- | ------------------------ |
+| Versión | Fecha      | Diferencia entre versiones    |
+| ------- | ---------- | ----------------------------- |
 | 1.0     | 2024-02-08 | Versión inicial del documento |
-| 2.0     | 2024-02-09 | Finalización del documento |
-| 3.0     | 2024-02-10 | Corrección del documento  |
-| 4.0     | 2024-02-15 | Correción del documento |
-| 5.0     | 2024-02-16 | Correción del documento |
-| 6.0     | 2024-02-22 | Correción del documento |
-| 7.0     | 2024-03-01 | Correción del documento |
+| 2.0     | 2024-02-09 | Finalización del documento    |
+| 3.0     | 2024-02-10 | Corrección del documento      |
+| 4.0     | 2024-02-15 | Correción del documento       |
+| 5.0     | 2024-02-16 | Correción del documento       |
+| 6.0     | 2024-02-22 | Correción del documento       |
+| 7.0     | 2024-03-01 | Correción del documento       |
 
 # TCO Summary - MuscleMate - Entregable #S1
 
@@ -22,12 +24,14 @@ En este documento, se establece el coste total de la propiedad respectivo al pro
 
 ### 2.1 Costes de personal
 
-El equipo encargado del proyecto, está formado por 15 integrantes. Cada uno de ellos, tiene la obligación de dedicar al menos 10 horas semanales a dicho proyecto. 
+El equipo encargado del proyecto, está formado por 15 integrantes. Cada uno de ellos, tiene la obligación de dedicar al menos 10 horas semanales a dicho proyecto.
 
 Teniendo en cuenta esto y los sueldos por hora de los siguientes perfiles:
+
 - Desarrollador– 11.25 €/h
 
 Por lo tanto, la estimación de costes de personal para las 4 semanas que dura el proyecto es la siguiente:
+
 - Desarrolladores: 15 x 10 x 11.25 = 1687.50€
 
 Coste total de personal = 1687.50€
@@ -57,4 +61,3 @@ Se considera la amortización del proyecto, que asciende a 57470€.
 - Gastos de trabajadores: 8960 €/mes
 
 **Coste total de operación mensual = 12506 €/mes**
-
